# open-car2x

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
common-amqp/: Cargo.toml
common-amqp/src/: dove_util.rs  lib.rs
common-async/: Cargo.toml
common-async/src/: lib.rs
common-build-info/: Cargo.toml  build.rs
common-build-info/src/: env.rs  info.rs  lib.rs
common-edge/: Cargo.toml
common-edge/src/: lib.rs
common-edge/src/amqp/: auth.rs  error.rs  message.rs  mod.rs  receiver.rs  sender.rs  sender_channel.rs  session.rs
common-log/: Cargo.toml
common-log-build-info/: Cargo.toml
common-log-build-info/src/: lib.rs
common-log/src/: lib.rs  logger.rs
common-message/: Cargo.toml
common-message-codec/: Cargo.toml
common-message-codec/src/: codec.rs  container.rs  edge.rs  err.rs  lib.rs  lpmc.rs  raw.rs
common-message/src/: id.rs  lib.rs  mid.rs
cstr-derive/: Cargo.toml
cstr-derive/src/: lib.rs
doc/images/: repository_structure.plantuml
examples/: README.md
examples/sample_client_c/: CMakeLists.txt  README.md  build_and_run.sh  build_asn1c.sh
examples/sample_client_c/asn1c_patches/: 000_c35ebd330b7c7e15c1bd61c9782e4259bd9bcb03.diff  000_c35ebd330b7c7e15c1bd61c9782e4259bd9bcb03.patch  001_constr_sequence_of_return_err.diff
examples/sample_client_c/proto/: CMakeLists.txt
examples/sample_client_c/src/: echo.c  echo.h  fusion.c  fusion.h  main.c  util.h  vehicle.c  vehicle.h  version.h
libconnector/: Cargo.toml  build.rs  cbindgen.toml
libconnector-android/: .gitignore  README.md  build.gradle  settings.gradle
libconnector-android/connectortest/: build.gradle
libconnector-android/connectortest/src/main/: AndroidManifest.xml
libconnector-android/connectortest/src/main/java/de/itd/lukas/connectortest/: MainActivity.java
libconnector-android/connectortest/src/main/java/de/itdesigners/lukas/connectortest/: DebugMessageSubscriber.java
libconnector-android/connectortest/src/main/res/layout/: activity_main.xml
libconnector-android/connectortest/src/main/res/values/: strings.xml  themes.xml
libconnector-android/connectortest/src/main/res/values-night/: themes.xml
libconnector-android/gradle/wrapper/: gradle-wrapper.properties
libconnector-android/libconnector-android/: build.gradle
libconnector-android/libconnector-android/src/main/: AndroidManifest.xml
libconnector-java/: pom.xml
libconnector-java/src/main/java/de/itdesigners/lukas/connector/: ApplicationInfo.java  Connection.java  ConnectionConfig.java  ConnectionInfo.java  ConnectionStatus.java  Connector.java  ConnectorInfo.java  Converter.java  DetailedMessage.java  Format.java  Identity.java  Message.java  MessageId.java  Version.java
libconnector-java/src/main/java/de/itdesigners/lukas/connector/jni/: NativeApplicationInfo.java  NativeConnection.java  NativeConnectionConfig.java  NativeConnectionInfo.java  NativeConnector.java  NativeConnectorInfo.java  NativeConverter.java  NativeDetailedMessage.java  NativeLogger.java  NativeMessage.java  NativeResultException.java  NativeVersion.java
libconnector-java/src/test/java/: LoadNativeApplication.java
libconnector-jni/: Cargo.toml
libconnector-jni/src/: android.rs  application_info.rs  connection.rs  connection_config.rs  connection_info.rs  connector.rs  connector_info.rs  conversion.rs  lib.rs  logging.rs  message.rs  message_detailed.rs  result_exception.rs  version.rs
libconnector/res/: connector_helper.h
libconnector/src/: conversion.rs  lib.rs  logging.rs  result.rs  util.rs
libconnector/src/connection/: ffi.rs  mod.rs
libconnector/src/worker/: con.rs  conf.rs  mod.rs  rcv.rs
messages/: Cargo.toml  build.rs
messages/src/: itd_data_protocol.rs  itd_ssdm_descriptions.rs  lib.rs
protocol/asn/: cam-pdu-descriptions.asn  cpm-pdu-descriptions.asn  denm-pdu-descriptions.asn  dsrc-simplified-v2.asn  itd-data-protocol.asn1  itd-ssdm-descriptions.asn  its-container.asn  mcm-pdu-descriptions.asn  vam-pdu-descriptions.asn  vam-temp-imports.asn  vru-motorcyclist-special-container.asn
protocol/proto/: itd_data_protocol.proto  itd_ssdm_descriptions.proto
protocol/sql/: itd_data_protocol.sql  itd_ssdm_descriptions.sql
