[package]
name = "common-log-build-info"
edition = "2021"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-build-info = { path = "../common-build-info" }
common-log = { path = "../common-log" }
