[package]
name = "common-log"
edition = "2021"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = { version = "0.8.1", default-features = false, features = ["console_appender"], optional = true }

log.workspace = true

common-build-info = { path = "../common-build-info" }

[features]
default = ["logger"]
logger = ["log4rs"]
