[package]
name = "cstr-derive"
version = "0.1.0"
authors = ["Michael Watzko <michael.watzko@it-designers.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies.syn]
version = "1.0.48"
features = ["derive"]

[dependencies]
quote = "1.0.7"