[package]
name = "connector-jni"
edition = "2021"
version.workspace = true
authors.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(target_os = "android")'.dependencies]
# android_logger = "0.10"
libc = "0.2.101"
lazy_static = "1.4.0"
ndk = "0.4.0"
ndk-sys = "0.2.1"

log.workspace = true

[dependencies]
jni = "0.19.0"
num-traits = "0.2"

connector = { path = "../libconnector" }
